einstein-ai/1.0/modules/ROOT/pages/einstein-ai-connector-reference.adoc
= Einstein AI Connector 1.0 Reference

Einstein AI Connector provides access to the Salesforce Einstein Trust Layer through the Models APIs. 

== Configurations
---
[[Config]]
=== Config

Default configuration

==== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<Config_Connection, Connection>>
 | Connection types to provide to this configuration. | | x
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  | 
|===

==== Connection Types

[[Config_Connection]]
===== Connection

====== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy.  |  | 
| Client Id a| String |  The OAuth public client ID as registered with the service provider. |  | *x*
| Client Secret a| String |  The OAuth client secret that corresponds to the client ID. |  | *x*
| Token Url a| String |  The service provider's token endpoint URL. |  `\https://{salesforceorg}/services/oauth2/token/` | 
| Scopes a| String |  The OAuth scopes to request during the OAuth dance. If not provided, it defaults the scopes in the annotation. |  | 
| Object Store a| String |  A reference to the object store to use to store each resource owner ID's data. If not specified, Mule runtime automatically provisions the default one. |  | 
|===

== Operations

* <<AgentDefinePromptTemplate>> 
* <<ChatAnswerPrompt>> 
* <<ChatAnswerPromptWithMemory>> 
* <<ChatGenerateFromMessages>> 
* <<EmbeddingAdhocFileQuery>> 
* <<EmbeddingGenerateFromFile>> 
* <<EmbeddingGenerateFromText>>
* <<RagAdhocLoadDocument>> 
* <<ToolsUseAiService>> 
* <<Unauthorize>>  

[[AgentDefinePromptTemplate]]
== AGENT Define Prompt Template
`<ms-einstein-ai:agent-define-prompt-template>`

Use the *Agent define prompt template* operation to use specific prompt templates. The prompt template language is a simple way to define and compose AI functions using plain text. You can use it to create natural language prompts, generate responses, extract information, invoke other prompts, or perform any other task that can be expressed with text.

=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Template a| String | Prompt template for the operation. |  #[payload] | 
| Instructions a| String | Instructions for the LLM, outlining the goals of the task. |  | x
| Dataset a| String | Dataset for the LLM to evaluate using the provided template and instructions. |  | x
| Output Mime Type a| String | MIME type of the payload this operation outputs. |  | 
| Output Encoding a| String |  Encoding of the payload this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model API Name a| String | Name of the API model that interacts with the LLM. |  sfdc_ai__DefaultOpenAIGPT35Turbo | 
| Probability a| Number | Probability of the model API staying accurate. |  0.8 | 
| Locale a| String | Localization information, which can include the default locale, input locale(s), and expected output locale(s). |  en_US | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type | Any
| Attributes Type a| <<EinsteinResponseAttributes>>
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-EINSTEIN-AI:CHAT_FAILURE 
* MS-EINSTEIN-AI:CONNECTIVITY 
* MS-EINSTEIN-AI:RETRY_EXHAUSTED 


[[ChatAnswerPrompt]]
== CHAT Answer Prompt
`<ms-einstein-ai:chat-answer-prompt>`

The *Chat answer prompt* operation sends a prompt request to the configured LLM. It uses a plain text prompt as input and responds with a plain text answer.

=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Prompt a| String | Plain text prompt to send to the LLM.   |  #[payload] | 
| Output Mime Type a| String |  MIME type of the payload this operation outputs. |  | 
| Output Encoding a| String | Encoding of the payload this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model API Name a| String | Name of the API model that interacts with the LLM. |  sfdc_ai__DefaultOpenAIGPT35Turbo | 
| Probability a| Number | Probability of the model API staying accurate. |  0.8 | 
| Locale a| String | Localization information, which can include the default locale, input locale(s), and expected output locale(s). |  en_US | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type | Any
| Attributes Type a| <<EinsteinResponseAttributes>>
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-EINSTEIN-AI:CHAT_FAILURE 
* MS-EINSTEIN-AI:CONNECTIVITY 
* MS-EINSTEIN-AI:RETRY_EXHAUSTED 


[[ChatAnswerPromptWithMemory]]
== CHAT Answer Prompt With Memory
`<ms-einstein-ai:chat-answer-prompt-with-memory>`

DEPRECATED. The *Chat answer prompt with memory* operation provides memory of the conversation history for a multi-user chat operation.

=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Prompt a| String | Plain text prompt to send to the LLM.   |  #[payload] | 
| Memory Path a| String | Path to the in-memory database for storing the conversation history.  |  | x
| Memory Name a| String |Name of the conversation. For multi-user support, enter the unique user ID.  |  | x
| Keep Last Messages a| Number | Maximum number of messages to remember for the conversation defined in *Memory name*. |  | x
| Output Mime Type a| String |  MIME type of the payload this operation outputs. |  | 
| Output Encoding a| String |  Encoding of the payload this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model API Name a| String | Name of the API model that interacts with the LLM.  |  sfdc_ai__DefaultOpenAIGPT35Turbo | 
| Probability a| Number | Probability of the model API staying accurate. |  0.8 | 
| Locale a| String | Localization information, which can include the default locale, input locale(s), and expected output locale(s). |  en_US | 
| Target Variable a| String | Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type | Any
| Attributes Type a| <<EinsteinResponseAttributes>>
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-EINSTEIN-AI:CHAT_FAILURE 
* MS-EINSTEIN-AI:CONNECTIVITY 
* MS-EINSTEIN-AI:RETRY_EXHAUSTED 


[[ChatGenerateFromMessages]]
== CHAT Generate From Messages
`<ms-einstein-ai:chat-generate-from-messages>`

The *Chat generate from messages* operation is a prompt request operation with provided messages to the configured LLM. It uses a plain text prompt as input and responds with a plain text answer.

=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Messages a| String |  |  #[payload] | 
| Output Mime Type a| String |  MIME type this operation outputs. |  | 
| Output Encoding a| String |  Encoding of the payload this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model API Name a| String | Name of the API model that interacts with the LLM. |  sfdc_ai__DefaultOpenAIGPT35Turbo | 
| Probability a| Number | Probability of the model API staying accurate. |  0.8 | 
| Locale a| String | Localization information, which can include the default locale, input locale(s), and expected output locale(s). |  en_US | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type | Any
| *Attributes Type* a| <<ResponseParameters>>
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-EINSTEIN-AI:CHAT_FAILURE 
* MS-EINSTEIN-AI:CONNECTIVITY 
* MS-EINSTEIN-AI:RETRY_EXHAUSTED 


[[EmbeddingAdhocFileQuery]]
== EMBEDDING Adhoc File Query
`<ms-einstein-ai:embedding-adhoc-file-query>`

=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Prompt a| String | Plain text prompt to send to the LLM.  |  #[payload] | 
| Input Stream a| Any |  |  | x
| Output Mime Type a| String | MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | Encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model API Name a| String | Name of the API model that interacts with the LLM. |  sfdc_ai__DefaultOpenAITextEmbeddingAda_002 | 
| File Type a| String a| Type of the document to ingest into the embedding store:

* Text
* PDF
* CSV
* URL |  PDF | 
| Option Type a| String |How to split the document prior to ingestion into the embedding or vector database. |  FULL | 
| Option Type a| String |  |  FULL | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type | Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-EINSTEIN-AI:CONNECTIVITY 
* MS-EINSTEIN-AI:EMBEDDING_OPERATIONS_FAILURE 
* MS-EINSTEIN-AI:RAG_FAILURE 
* MS-EINSTEIN-AI:RETRY_EXHAUSTED 
* MS-EINSTEIN-AI:TOOLS_OPERATION_FAILURE

[[EmbeddingGenerateFromFile]]
== EMBEDDING Generate From File
`<ms-einstein-ai:embedding-generate-from-file>`


=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | *x*
| Input Stream a| Any |  |  #[payload] | 
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  Encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model API Name a| String |  |  sfdc_ai__DefaultOpenAITextEmbeddingAda_002 | 
| File Type a| String |  |  PDF | 
| Option Type a| String |  |  FULL | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-EINSTEIN-AI:CONNECTIVITY 
* MS-EINSTEIN-AI:EMBEDDING_OPERATIONS_FAILURE 
* MS-EINSTEIN-AI:RAG_FAILURE 
* MS-EINSTEIN-AI:RETRY_EXHAUSTED 
* MS-EINSTEIN-AI:TOOLS_OPERATION_FAILURE 

[[EmbeddingGenerateFromText]]
== EMBEDDING Generate From Text
`<ms-einstein-ai:embedding-generate-from-text>`


=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | *x*
| Text a| String |  |  #[payload] | 
| Output Mime Type a| String |  MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  Encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior.  |  | 
| Model API Name a| String |  |  sfdc_ai__DefaultOpenAITextEmbeddingAda_002 | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | 
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| <<ResponseParameters>>
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-EINSTEIN-AI:CONNECTIVITY 
* MS-EINSTEIN-AI:EMBEDDING_OPERATIONS_FAILURE 
* MS-EINSTEIN-AI:RAG_FAILURE 
* MS-EINSTEIN-AI:RETRY_EXHAUSTED 
* MS-EINSTEIN-AI:TOOLS_OPERATION_FAILURE 


[[RagAdhocLoadDocument]]
== RAG Adhoc Load Document
`<ms-einstein-ai:rag-adhoc-load-document>`


=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Prompt a| String | Plain text prompt to send to the LLM. |  #[payload] | 
| File Path a| String | Full file path for the document to ingest into the embedding store. Ensure the file path is accessible. |  | x
| Output Mime Type a| String | MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | Encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Embedding Name a| String |  |  sfdc_ai__DefaultOpenAITextEmbeddingAda_002 | 
| File Type a| String a| Type of the document to ingest into the embedding store:

* Text
* PDF
* CSV
* URL  |  PDF | 
| Option Type a| String | How to split the document prior to ingestion into the embedding or vector database. |  FULL | 
| Model API Name a| String | Name of the API model that interacts with the LLM. |  sfdc_ai__DefaultOpenAIGPT35Turbo | 
| Probability a| Number |Probability of the model API staying accurate.  |  0.8 | 
| Locale a| String | Localization information, which can include the default locale, input locale(s), and expected output locale(s). |  en_US | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type | Any
| Attributes Type a| <<EinsteinResponseAttributes>>
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-EINSTEIN-AI:CONNECTIVITY 
* MS-EINSTEIN-AI:EMBEDDING_OPERATIONS_FAILURE 
* MS-EINSTEIN-AI:RAG_FAILURE 
* MS-EINSTEIN-AI:RETRY_EXHAUSTED 
* MS-EINSTEIN-AI:TOOLS_OPERATION_FAILURE 


[[ToolsUseAiService]]
== Tools Use Ai Service
`<ms-einstein-ai:tools-use-ai-service>`


=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Prompt a| String | Plain text prompt to send to the LLM. |  #[payload] | 
| Input Stream a| Any |  |  | *x*
| Output Mime Type a| String | MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | Encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model API Name a| String | Name of the API model that interacts with the LLM. |  sfdc_ai__DefaultOpenAIGPT35Turbo | 
| Probability a| Number | Probability of the model API staying accurate. |  0.8 | 
| Locale a| String | Localization information, which can include the default locale, input locale(s), and expected output locale(s). |  en_US | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<EinsteinResponseAttributes>>
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-EINSTEIN-AI:CONNECTIVITY 
* MS-EINSTEIN-AI:EMBEDDING_OPERATIONS_FAILURE 
* MS-EINSTEIN-AI:RAG_FAILURE 
* MS-EINSTEIN-AI:RETRY_EXHAUSTED 
* MS-EINSTEIN-AI:TOOLS_OPERATION_FAILURE 

[[Unauthorize]]
== Unauthorize
`<ms-einstein-ai:unauthorize>`

Deletes all the access token information of a given resource owner ID so that it's impossible to execute any operation for that user without repeating the OAuth dance.

=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | *x*
| Config Ref a| ConfigurationProvider | Name of the configuration to use to execute this component. |  | *x*
|===


=== For Configurations

* <<Config>> 

== Types
=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Reconnection strategy to use. |  | 
|===

[[Reconnect]]
=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  | 
| Count a| Number | How many reconnection attempts the Mule app can make. |  | 
|===

[[ReconnectForever]]
=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  | 
|===

[[PoolingProfile]]
=== Pooling Profile

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Active a| Number | Controls the maximum number of Mule components that can be borrowed from a session at one time. When set to a negative value, there is no limit to the number of components that may be active at one time. When maxActive is exceeded, the pool is said to be exhausted. |  | 
| Max Idle a| Number | Controls the maximum number of Mule components that can sit idle in the pool at any time. When set to a negative value, there is no limit to the number of Mule components that may be idle at one time. |  | 
| Max Wait a| Number | Specifies the number of milliseconds to wait for a pooled component to become available when the pool is exhausted and the exhaustedAction is set to WHEN_EXHAUSTED_WAIT. |  | 
| Min Eviction Millis a| Number | Determines the minimum amount of time an object may sit idle in the pool before it is eligible for eviction. When non-positive, no objects will be evicted from the pool due to idle time alone. |  | 
| Eviction Check Interval Millis a| Number | Specifies the number of milliseconds between runs of the object evictor. When non-positive, no object evictor is executed. |  | 
| Exhausted Action a| Enumeration, one of:

** WHEN_EXHAUSTED_GROW
** WHEN_EXHAUSTED_WAIT
** WHEN_EXHAUSTED_FAIL | Specifies the behavior of the Mule component pool when the pool is exhausted. Possible values are: "WHEN_EXHAUSTED_FAIL", which will throw a NoSuchElementException, "WHEN_EXHAUSTED_WAIT", which will block by invoking Object.wait(long) until a new or idle object is available, or WHEN_EXHAUSTED_GROW, which will create a new Mule instance and return it, essentially making maxActive meaningless. If a positive maxWait value is supplied, it will block for at most that many milliseconds, after which a NoSuchElementException will be thrown. If maxThreadWait is a negative value, it will block indefinitely. |  | 
| Initialisation Policy a| Enumeration, one of:

** INITIALISE_NONE
** INITIALISE_ONE
** INITIALISE_ALL | Determines how components in a pool should be initialized. The possible values are: INITIALISE_NONE (will not load any components into the pool on startup), INITIALISE_ONE (will load one initial component into the pool on startup), or INITIALISE_ALL (will load all components in the pool on startup) |  | 
| Disabled a| Boolean | Whether pooling should be disabled |  | 
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  | 
|===

[[EinsteinResponseAttributes]]
=== Einstein Response Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Content Quality a| <<ContentQuality>> |  |  | 
| Generation Id a| String |  |  | 
| Generation Parameters a| <<GenerationParameters>> |  |  | 
| Response Id a| String |  |  | 
| Response Parameters a| <<ResponseParameters>> |  |  | 
|===

[[ContentQuality]]
=== Content Quality

Content moderation details for generated content, including its safety and quality scores.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Scan Toxicity a| <<ScanToxicity>> | Scans content for toxicity. |  | 
|===

[[ScanToxicity]]
=== Scan Toxicity

Represents safety and toxicity data.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Categories a| Array of <<Categories>> |  |  | 
| Is Detected a| Boolean | Indicates whether a scan detected any toxic content. When the `isDetected` field is `true`, it indicates a high level of confidence that the content contains toxic language. When the `isDetected` field is `false`, it doesn’t necessarily mean there isn’t toxicity, but rather, that the model didn’t detect toxicity in the content. |  | 
|===

[[Categories]]
=== Categories

The array of toxicity categories.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Category Name a| String | Name of the category. |  | 
| Score a| String | A toxicity score value from 0 to 1. A higher score means the response is more likely to be toxic. |  | 
|===

[[GenerationParameters]]
=== Generation Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Finish Reason a| String |  |  | 
| Index a| Number |  |  | 
| Logprobs a| Any |  |  | 
| Refusal a| Any |  |  | 
|===

[[ResponseParameters]]
=== Response Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Model a| String |  |  | 
| Object a| String |  |  | 
| System Finger Print a| String |  |  | 
| Token Usage a| <<TokenUsage>> |  |  | 
|===

[[TokenUsage]]
=== Token Usage

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Completion Token Details a| <<CompletionTokensDetails>> |  |  | 
| Input Count a| Number | Number of tokens the LLM receives from the prompt. |  | 
| Output Count a| Number | Number of tokens the LLM generates in response to the input tokens. |  | 
| Prompt Token Details a| <<PromptTokensDetails>> |  |  | 
| Total Count a| Number |  |  | 
|===

[[CompletionTokensDetails]]
=== Completion Tokens Details

Requesting a large number of generated tokens completions can cause increased latencies.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Accepted Prediction Tokens a| Number | Number of accepted prediction tokens. |  | 
| Audio Tokens a| Number | Number of audio tokens completions. |  | 
| Reasoning Tokens a| Number | Number of tokens for reasoning and outputs. |  | 
| Rejected Prediction Tokens a| Number | Number of prediction tokens the LLM generated that were later discarded because they were deemed incorrect or not useful within the context. |  | 
|===

[[PromptTokensDetails]]
=== Prompt Tokens Details

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Audio Tokens a| Number | Number of audio tokens in the prompt. |  | 
| Cached Tokens a| Number | Number of cached tokens in the prompt. |  | 
|===

[[RepeatableInMemoryStream]]
=== Repeatable In-Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the MAX buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Initial amount of memory to allocate to the data stream. If the streamed data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of *Max Buffer Size*. |  | 
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  | 
| Max Buffer Size a| Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *Initial Buffer Size*, *Buffer Size Increment*, and *Max Buffer Size* fields. |  | 
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer's content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance:

* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.

* Configure a smaller buffer size to decrease memory load at the expense of response time. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Size* field. |  | 
|===

[[ErrorMapping]]
=== Error Mapping

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT |  |  | 
| Target a| String |  |  | x
|===


== See Also

* xref:connectors::introduction/intro-config-use-acb.adoc[]
* xref:connectors::introduction/intro-config-use-studio.adoc[Using Studio to Configure a Connector]
* xref:index.adoc[Einstein AI Connector Overview]
* https://help.mulesoft.com[MuleSoft Help Center]
